<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/character_item_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00ffffff"
    android:padding="16dp"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageCharacter"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/character"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:textSize="@dimen/character_item_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCharacter"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:textSize="@dimen/character_item_text_size"
            app:layout_constraintStart_toEndOf="@+id/imageCharacter"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:text="@string/species" />

        <TextView
            android:id="@+id/type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:textSize="@dimen/character_item_text_size"
            app:layout_constraintStart_toEndOf="@+id/imageCharacter"
            app:layout_constraintTop_toBottomOf="@id/species"
            tools:text="@string/type" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:textSize="@dimen/character_item_text_size"
            app:layout_constraintStart_toEndOf="@+id/imageCharacter"
            app:layout_constraintTop_toBottomOf="@id/type"
            tools:text="@string/status" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:textSize="@dimen/character_item_text_size"
            app:layout_constraintStart_toEndOf="@+id/imageCharacter"
            app:layout_constraintTop_toBottomOf="@id/status"
            tools:text="@string/gender" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

